--- a/services/madoc-ts/translations/nl/madoc.json
+++ b/services/madoc-ts/translations/nl/madoc.json
@@ -299,7 +299,7 @@
   "Site configuration": "Siteconfiguratie",
   "Some of your contributions may expire": "Sommige van jouw bijdragen kunnen vervallen",
   "Sorry no canvases are available at the moment": "Sorry, er zijn geen canvases beschikbaar op dit moment",
-  "Start contributing": "Start bij te dragen",
+  "Start contributing": "Start bijdrage",
   "Structure": "Structuur",
   "Submit": "Indienen",
   "Submit for review": "Indienen voor revisie",
